Fixed spacing on the html, css, and javascript files

--- a/Groovy Package Tracker/HTML/MainStyleSheet.css
+++ b/Groovy Package Tracker/HTML/MainStyleSheet.css
@@ -1,70 +1,72 @@
-*{
-font-family:
-	font-family:sans-serif;
+* {
+    font-family: font-family: sans-serif;
 }
 #details {
-	font-family:sans-serif;
+    font-family: sans-serif;
 }
 #map {
-	height: 100%; 
-	width:100%
-	float:left;
+    height: 100%;
+    width: 100% float: left;
 }
-#controlPanel{
-	float:left;
-	height:100%;
-	width:20%;
-	padding-right:17px;
+#controlPanel {
+    float: left;
+    height: 100%;
+    width: 20%;
+    padding-right: 17px;
 }
 body {
-	background-color:#333333;
+    background-color: #333333;
 }
 div.tabs {
-	min-height: 100%;
-	position: relative;
-	line-height: 1;
-	z-index: 0;
+    min-height: 100%;
+    position: relative;
+    line-height: 1;
+    z-index: 0;
 }
 div.tabs > div {
-	display: inline
+    display: inline
 }
 div.tabs > div > a {
-	color: black;
-	background: #6699ff;
-	text-decoration: none;
-	padding: 0.2em;
-	border: 0.1em outset #003bb3;
-	border-bottom: 0.1em solid #6699ff;
+    color: black;
+    background: #6699ff;
+    text-decoration: none;
+    padding: 0.2em;
+    border: 0.1em outset #003bb3;
+    border-bottom: 0.1em solid #6699ff;
 }
 div.tabs > div > a:hover {
-	color: white;
+    color: white;
 }
 /* unselected tab header */
+
 div.tabs > div:not(:target) > a {
-	border-bottom: none;
-	background: #0040ff;
+    border-bottom: none;
+    background: #0040ff;
 }
 div.tabs > div:target > a,
 :target #default2 > a {
-	border-bottom: 0.1em solid #6699ff;
-	background: #6699ff
+    border-bottom: 0.1em solid #6699ff;
+    background: #6699ff
 }
 div.tabs > div > div {
-	background: #6699ff;
-	z-index: -2;
-	left: 0; top: 1.3em;
-	bottom: 0; right: 0;
-	overflow: auto;
-	padding: 0.3em;
-	border: 0.1em outset #003bb3
+    background: #6699ff;
+    z-index: -2;
+    left: 0;
+    top: 1.3em;
+    bottom: 0;
+    right: 0;
+    overflow: auto;
+    padding: 0.3em;
+    border: 0.1em outset #003bb3
 }
 div.tabs > div:not(:target) > div {
-	position: absolute
+    position: absolute
 }
-div.tabs > div:target > div, :target #default2 > div {
-	position: absolute;
-	z-index: -1
+div.tabs > div:target > div,
+:target #default2 > div {
+    position: absolute;
+    z-index: -1
 }
-div.tabs :target {
-	outline: none
+div.tabs:target {
+    outline: none
 }
